# ADTest

./: README.md  config.sh
src/: ADTestConfig.h.in  CMakeLists.txt  bug.cc  test.cc  test.h  tutorial.cc
src/Adept/: CMakeLists.txt
src/euler/: CMakeLists.txt  euler.cc  euler.h  euler_adept.h  euler_codipack.h  euler_diff.h  euler_primal.h
src/utils/: CMakeLists.txt  array.h  complexify.h  utils.h
